fixd nav spacing

--- a/src/Styles/Navbar.module.css
+++ b/src/Styles/Navbar.module.css
@@ -61,7 +61,7 @@
 
   display: flex;
   align-items: center;
-  gap: 2rem;
+  gap: 1.5rem;
 
   z-index: 999;
   right: 2%;
